# MieDiff

./: .gitignore  LICENSE.txt  README.md  changelog.md  conventions.md  forwardAndBackwardTesting.py  newidea.ipynb  pyproject.toml  requirements.yml  setup.py  testingForward.py  testingWrappers.py  testingWrappersMulti.py  todo.md  torchFunctionTesting.py
Examples/: builtinOptimiser.ipynb  customOptimiser.ipynb  dataset.h5  forwardSimulation.ipynb  rgbOptimisation.ipynb  tandem.ipynb
doc/: Makefile  requirements.txt
examples/: dev_customOptimiser.ipynb  dev_rgbOptimisation.ipynb  dev_tandem.ipynb  ex_01_getting_started.py  ex_02_autodiff.py  ex_02_benchmark.py  ex_02_large_particles_stability.py  ex_02_simple_optimisation.py  ex_03_autodiff.py  ex_03_optimisation.py  ex_04_benchmark.py  ex_04_multilayer_nearfields.py  ex_04_optimisation.py  ex_05_benchmark_cpu_gpu.py  ex_05_tandem.py  ex_06_multi_scattering.py  ex_06_optimisation.py  ex_07_multi_scattering_autodiff.py  ex_08_multi_scattering.py  ex_08_multilayer_scattnlay_compare.py  ex_09_benchmark.py  ex_09_multilayer_nearfields_scattnlay_compare.py  ex_10_cpu_gpu_benchmark.py  ex_10_pena_single_precision_cpu_gpu_benchmark.py
pymiediff/: __init__.py  angular.py  coreshell.py  farfield.py  helper.py  main.py  special.py
testing/: WIPmain.ipynb  angular_function_plotting_test.py  autodiff_function_implementation_test.py  autodiff_optimiser_test.py  autodiff_optimiser_test_vectorised.py  demo_PW_optimization.py  demo_PW_optimization_ang.py  demo_PW_vectorization.py  dev_forwardSimulation.ipynb  ex_03_optimisation_old.py  ex_03_optimisation_proposition_peter.py  forwardAndBackwardTesting.py  legendre_polynomial_test.py  nearfields.py  obsolete_newidea.ipynb  obsolete_prototypeMieDiff.ipynb  particleOpt.py  particle_optimiser_test.py  readme.md  recurrences.py  stabilty_test.py  stabilty_test_recurrences.py  testingWrappers.py  torch_harmonics_test.py  traditionalOptimiser.ipynb  vectorization_demo_PW.py
tests/: test_angular.py  (+10 more)
(+25 files in other folders)
